refactor: 백엔드 설정 업데이트 및 AI 클라이언트 기능 개선
- docker-compose.yml에서 버전 명시 제거
- Dockerfile에 README.md를 pyproject.toml과 함께 복사하도록 업데이트
- 데이터베이스 작업을 위한 새로운 데이터베이스 관리 명령어를 Makefile에 추가
- pyproject.toml에서 프로젝트 이름 변경 및 호환성 개선을 위한 의존성 업데이트
- 사용자 토큰에 대한 오래된 Alembic 마이그레이션 파일 삭제
- AI 서비스 통합 강화를 위한 config.py에 AI 설정 추가
- 회로 차단기 및 재시도 메커니즘을 통한 AI 클라이언트 기능 통합으로 안정성 향상
- main.py에 AI 라우트 추가 및 시작 시 데이터베이스 자동 시드 기능 추가
- 새로운 ConflictException 클래스를 통한 예외 처리 개선
- 비동기 작업을 지원하도록 데이터베이스 세션 관리 리팩토링
- 사용자, 상점, 고객, 치료에 대한 포괄적인 샘플 데이터를 생성하도록 시딩 스크립트 개선

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -1,4 +1,4 @@
-.PHONY: help install dev test lint fmt clean run migrate revision seed docker-up docker-down models-from-erd revision-auto routes-from-excel
+.PHONY: help install dev test lint fmt clean run migrate revision seed docker-up docker-down models-from-erd revision-auto routes-from-excel db-reset db-init
 
 help: ## Show this help message
 	@echo 'Usage: make [target]'
@@ -90,3 +90,25 @@ routes-from-excel-no-tests: ## Generate FastAPI routes from Excel API spec (skip
 
 routes-from-excel-no-services: ## Generate FastAPI routes from Excel API spec (skip services)
 	python tools/generate_routes_from_excel.py --skip-services
+
+# Database Management
+db-reset: ## Reset database (drop all tables and recreate with migrations)
+	python -m app.scripts.init_db --reset --force
+
+db-reset-interactive: ## Reset database with confirmation prompt
+	python -m app.scripts.init_db --reset
+
+db-reset-with-seed: ## Reset database and seed with sample data
+	python -m app.scripts.init_db --reset --seed --force
+
+db-init: ## Initialize database (create tables with migrations)
+	python -m app.scripts.init_db --init
+
+db-init-with-seed: ## Initialize database and seed with sample data
+	python -m app.scripts.init_db --init --seed
+
+db-seed-only: ## Seed database with sample data only
+	python -m app.scripts.init_db --seed
+
+db-status: ## Check database connection and status
+	python -c "import asyncio; from app.db.session import get_async_session; from sqlalchemy import text; asyncio.run(get_async_session().__aenter__().execute(text('SELECT 1')))"
