--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -3,26 +3,31 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "mobile-backend"
-version = "0.1.0"
-description = "FastAPI mobile backend with JWT authentication"
+name = "thearete-backend"
+version = "1.0.0"
+description = "FastAPI backend for Thearete beauty platform with comprehensive security and AI features"
 authors = [
     {name = "Thearete Team", email = "team@thearete.com"},
 ]
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.9"
 dependencies = [
     "fastapi>=0.104.0",
     "uvicorn[standard]>=0.24.0",
     "sqlalchemy>=2.0.0",
     "alembic>=1.12.0",
     "psycopg2-binary>=2.9.0",
+    "asyncpg>=0.28.0",
+    "greenlet>=2.0.0",
     "pydantic>=2.5.0",
     "pydantic-settings>=2.1.0",
+    "email-validator>=2.0.0",
     "python-jose[cryptography]>=3.3.0",
     "passlib[bcrypt]>=1.7.4",
     "python-dotenv>=1.0.0",
     "httpx>=0.25.0",
+    "tenacity>=8.2.0",
+    "click>=8.0.0",
 ]
 
 [project.optional-dependencies]
@@ -99,3 +104,6 @@ addopts = [
     "--cov-report=html",
 ]
 asyncio_mode = "auto"
+
+[tool.hatch.build.targets.wheel]
+packages = ["app"]
