--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -17,8 +17,8 @@ services:
 
   backend:
     build: .
-    ports:
-      - "8000:8000"
+    expose:
+      - "8000"
     environment:
       DATABASE_URL: postgresql://postgres:password@postgres:5432/mobile_backend
       SECRET_KEY: dev-secret-key-change-in-production
@@ -28,7 +28,22 @@ services:
         condition: service_healthy
     volumes:
       - .:/app
+      - uploads_data:/var/app/media
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
+
+  nginx:
+    image: nginx:alpine
+    platform: linux/amd64
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - uploads_data:/var/app/media:ro
+      - .:/app:ro
+    depends_on:
+      - backend
+    restart: unless-stopped
 
 volumes:
   postgres_data:
+  uploads_data:
