--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "httpx>=0.25.0",
     "tenacity>=8.2.0",
     "click>=8.0.0",
+    "python-multipart>=0.0.6",
 ]
 
 [project.optional-dependencies]
