--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
     "tenacity>=8.2.0",
     "click>=8.0.0",
     "python-multipart>=0.0.6",
+    "Pillow>=10.0.0",
 ]
 
 [project.optional-dependencies]
