--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   
   # SVG Support
   flutter_svg: ^2.0.9
+  
+  # Image Picker
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
